useremail with unique constraints by 2 fields
